; ModuleID = '/home/carl/AnghaBench/tengine/modules/ngx_http_upstream_dyups_module/extr_ngx_http_dyups_lua.c_ngx_http_dyups_lua_preload.c'
source_filename = "/home/carl/AnghaBench/tengine/modules/ngx_http_upstream_dyups_module/extr_ngx_http_dyups_lua.c_ngx_http_dyups_lua_preload.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [10 x i8] c"ngx.dyups\00", align 1
@ngx_http_dyups_lua_register = common dso_local global i32 0, align 4
@NGX_OK = common dso_local global i64 0, align 8
@NGX_ERROR = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ngx_http_dyups_lua_preload(i32* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32*, i32** %3, align 8
  %5 = load i32, i32* @ngx_http_dyups_lua_register, align 4
  %6 = call i64 @ngx_http_lua_add_package_preload(i32* %4, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 %5)
  %7 = load i64, i64* @NGX_OK, align 8
  %8 = icmp ne i64 %6, %7
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = load i64, i64* @NGX_ERROR, align 8
  store i64 %10, i64* %2, align 8
  br label %13

11:                                               ; preds = %1
  %12 = load i64, i64* @NGX_OK, align 8
  store i64 %12, i64* %2, align 8
  br label %13

13:                                               ; preds = %11, %9
  %14 = load i64, i64* %2, align 8
  ret i64 %14
}

declare dso_local i64 @ngx_http_lua_add_package_preload(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
